[package]
name = "multiman"
version = "0.1.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
num-complex = "0.2.3"
image = "0.22.3"
num_cpus = "1.11.1"
