[package]
name = "multiman"
version = "0.2.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3.26", default_features = false }
num-complex = "0.4.0"
num_cpus = "1.13.1"

[dependencies.image]
version = "0.23.14"
default_features = false
features = ["png", "pnm", "webp", "bmp"]
